src/snapshots/droid_tui__regression__visual_optimizer_menu_snapshot@optimizer_menu_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                     DROID: optimizer_latency                                     │
└─╭ Optimizer (3) · w = 0.0 (min-sum) ───────────────────────────────────────────────────────────╮─┘
┌─│▶ banner (default) obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 · back-edges 4→0                  │
│ │   global min-sum obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 · back-edges 4→0                   │
│ │   annealing obj 1.00 · avg 4.00→1.00 · max 4.00→1.00 · back-edges 4→0                        │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
│ │                                                                                              │
└─│                                                                                              │
┌─╰ j/k select · Enter preview · r restore · s export · Esc close ───────────────────────────────╯─┐
│Optimizer w = 0.0: j/k select · Enter preview · r restore · s export · Esc close | Renders degrade│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
