src/snapshots/droid_tui__regression__visual_optimizer_menu_snapshot@optimizer_menu_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                               DROID: optimizer_latency                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Optimizer ───────────────────────────────────┐
│┌───┐┌──┐┐                                                            ││ Optimizer (3) · w = 0.0 (min-sum)            │
││ CV…  C…                                                             ││▶ banner (default) obj 1.00 · avg 4.00→1.00 · │
││   ││  ││                                                            ││max 4.00→1.00 · back-edges 4→0                │
││   ││  ││                                                            ││   global min-sum obj 1.00 · avg 4.00→1.00 ·  │
││   ││  ││                                                            ││max 4.00→1.00 · back-edges 4→0                │
││   ││  ││                                                            ││   annealing obj 1.00 · avg 4.00→1.00 · max   │
││   ││  ││                                                            ││4.00→1.00 · back-edges 4→0                    │
││   ││  ││                                                            ││ j/k select · Enter preview · r restore · s   │
││   ││  ││                                                            ││export · Esc close                            │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││ ▶ ││  ││                                                            ││                                              │
││ … ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
││   ││  ││                                                            ││                                              │
│└───┘└──┘┘                                                            ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Optimizer w = 0.0: j/k select · Enter preview · r restore · s export · Esc close | Renders degraded at 120 cols — use │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
