src/snapshots/droid_tui__regression__visual_optimizer_menu_snapshot@optimizer_menu_terminal_60.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────┐
│                 DROID: optimizer_latency                 │
└─╭ Optimizer (3) ───────────────────────────────────────╮─┘
┌ │▶ banner (default) avg 4.00→1.00 · max 4.00→1.00 · bac│─┐
│ │   global min-sum avg 4.00→1.00 · max 4.00→1.00 · back│ │
│ │   min-max avg 4.00→1.00 · max 4.00→1.00 · back-edges │ │
│ │                                                      │ │
└─│                                                      │─┘
┌ │                                                      │─┐
│ │                                                      │ │
│ │                                                      │ │
│ │                                                      │ │
└─│                                                      │─┘
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
  │                                                      │
┌─╰ j/k select · Enter preview · r restore · s export · E╯─┐
│Optimizer: j/k select · Enter preview · r restore · s expo│
└──────────────────────────────────────────────────────────┘
